# flashcards

./: flashcard.code-workspace  pyproject.toml
src/: db.py  home.py
src/db/: config.py  entities.py  services.py  tables.py
src/pages/: answer_flashcards.py  manage_display.py  manage_flashcards.py  manage_temp.py
tests/: test_crud_cards.py  test_crud_themes.py  test_db.feature  test_db.py  test_init_db.py  test_stats_operations.py
tests/features/: crud_cards.feature  crud_themes.feature  database_initialization.feature  init_db.feature  stats_operations.feature
