[tool.poetry]
name = "flashcard"
version = "0.1.0"
description = ""
authors = ["Laurent Bihin <laurent.bihin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
